--- a/javaee7-simple-sample-master/pom.xml
+++ b/javaee7-simple-sample-master/pom.xml
@@ -25,8 +25,8 @@
     </scm>
     <developers>
         <developer>
-            <name>Arun Gupta</name>
-            <email>arun.gupta@gmail.com</email>
+            <name>Satish Chennu</name>
+            <email>satishchennu@gmail.com</email>
         </developer>
     </developers>
     <distributionManagement>
